# etrade_invoice_parse

./: .gitignore  README.md  app.py  main.py  project_context_20260630_163003.txt  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
output/: project_context_test.txt
output/public_workbooks/: 30001153689_public.xlsx
scripts/: dump_py_to_txt.py
src/invoice_processing/: __init__.py  cli.py  config.py  emailer.py  exceptions.py  logging_config.py  models.py  processing.py  validators.py
src/invoice_processing/exporters/: excel.py
src/invoice_processing/parsers/: __init__.py  address.py  common.py  invoice_parser.py
src/invoice_processing/pdf/: extractor.py
tests/: test_common.py  test_emailer.py  test_public_exporter.py
